# bitwise-cli

./: .gitignore  CMakeLists.txt  README.md  ast.zig  build.zig  lexer.zig  main.zig  parser.zig
include/: Parse.h  Parser.h
src/: arena.zig  ast.zig  hash.zig  history.zig  lexer.zig  main.c  main.zig  parse.c  parser.c  parser.zig  terminal.zig
